--- a/templates/index.html
+++ b/templates/index.html
@@ -1,12 +1,13 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="ja">
 <head>
     <meta charset="UTF-8">
     <title>CTC RAG Chat</title>
 </head>
 <body>
     <h1>Welcome! CTC RAG Chat</h1>
-    <p><a href="/SimpleChat">シンプルチャット</a></p>
-    <p><a href="/AskChat">問診チャット</a></p>
+    <p><a href="/simpleChat">シンプルチャット</a></p>
+    <p><a href="/askChat">問診チャット</a></p>
+    <p><a href="/modifyAnswer">修正画面</a></p>
 </body>
 </html>
